# Hooroar

./: README.md  package.json
.github/workflows/: publish-hooroar.yml  staging-hooroar.yml
src/: App.vue  main.js  socket.js
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: HelloWorld.vue  SoundSelector.vue  Toast.vue  UserPanel.vue
src/store/: createWebSocketPlugin.js  index.js  sounds.js
src/views/: Authenticate.vue  Sounds.vue
